h2. Change Log

Also see the "release notes of underlying morphia library":http://code.google.com/p/morphia/wiki/ReleaseNotes and the GORM-MongoDB "User Guide":http://jkuehn.github.com/gorm-mongodb/

h3. v0.7 - upcoming
* -

h3. v0.6 - 2011-02-19
* *PLUGIN RENAMED*: now you will find this plugin as 'mongodb-morphia' in the grails repository
* *breaking change* findByX is no longer synonym for findAllByX, but for findOneByX. So findByX now returns only the first result, and is consistent with find() and findAll() methods.
* support for replica sets
* implemented the beforeValidate event introduced in "grails 1.3.6":http://grails.org/1.3.6+Release+Notes
* updated morphia library to *0.99*

h3. v0.5.4 - 2010-12-10
* support for getAll method
* support for countAll method
* updated morphia library to *0.98*

h3. v0.5.3 - 2010-11-30
* updated morphia library to *0.97*

h3. v0.5.2 - 2010-11-26
* updated morphia library to *0.96*
* added static collection property to access the unterlying mongodb collection
* added addTo* methods support
* by default the classname is not stored for every document anymore. Add annotation @com.google.code.morphia.annotations.Entity(noClassnameStored=false) to enable manually

h3. v0.5.1 - 2010-10-03
* added static update method

h3. v0.5 - 2010-09-15
* Maven is now used to resolve MongoDB driver and morphia dependency
* updated morphia library to *0.95*
** ObjectId is now default id type
** update method uses UpdateOperation now - *breaking change!* - see user guide
* using MongoDB java driver *2.1*
* redefined and extended index mapping

h3. v0.4.3 - 2010-08-26
* Fixes "GRAILSPLUGINS-2405":http://jira.codehaus.org/browse/GRAILSPLUGINS-2405 - Pagination parameters falsely removed

h3. v0.4.2 - 2010-08-20
* Fixes "GRAILSPLUGINS-2399":http://jira.codehaus.org/browse/GRAILSPLUGINS-2399 - Better error handling in case config is missing
* Fixes "GRAILSPLUGINS-2398":http://jira.codehaus.org/browse/GRAILSPLUGINS-2398 - Documentation fixes
