@@ -5,6 +5,11 @@ Also see the "release notes of underlying morphia library":http://code.google.co
 h3. v0.7 - upcoming
 * -
 
+h3. v0.6.1 - 2011-02-24
+* "GRAILSPLUGINS-2895":http://jira.codehaus.org/browse/GRAILSPLUGINS-2895
+** Subclasses don't get the id injected automatically anymore - if the superclass is also managed by the plugin
+** You can control the autoinjection process by using the grails.plugins.mongodb.ast.TransformationConfiguration annotation
+
 h3. v0.6 - 2011-02-19
 * *PLUGIN RENAMED*: now you will find this plugin as 'mongodb-morphia' in the grails repository
 * *breaking change* findByX is no longer synonym for findAllByX, but for findOneByX. So findByX now returns only the first result, and is consistent with find() and findAll() methods.
